edits to chapter 1 proceeding, first section complete

--- a/chap1.tex
+++ b/chap1.tex
@@ -12,25 +12,25 @@
 %%NHTSA/SAE! That way everything is consistent & in one place
 
 
-The popular narratives about self-driving vehicles cannot have come from
-the ether. But what are their roots? What are the sources from which
+The popular narratives about self-driving vehicles have not appeared
+out of nowhere. But what are their roots? What are the sources from which
 these stories come, the founts of technological ideology from which
 they spring? Journalistic accounts of technological change are of
 course impacted by a wide variety of practices and perspectives, from
 the market and readership needs of news organizations to the pervasive
-culture of commodity scientism.\cite{???-smithCommodityScientism} The
-reasons for why these stories are the way they are may be innumerable
-and difficult to pin down. Specifically regarding the ways that
+culture of commodity scientism.\cite{smithSelling} The
+reasons for why these stories take a particular form may be innumerable
+and difficult to pin down, in general. But specifically regarding the ways that
 driverless cars are figured in the press as autonomous machines, there
-are a number of identifiable sources for these modes of writing and
-ideological connections: science fiction, factory automation,
-artificial intelligence, and engineering and policy documents. Some of
+are a number of identifiable sources for these ideological slants and
+modes of rhetoric: science fiction, factory automation history,
+artificial intelligence, and current engineering and policy documents. Some of
 these sources themselves have more direct impacts, such as
 policy documents that stand to shape the way state legislation proceeds. Each,
 in its turn, impacts the popular narrative in specific and important
 ways, which must be understood if we are to come to grips with the
-question of why we are receiving a particular story, why vehicle
-automation appears on the surface the way that it does.
+question of why we see a particular dominant narrative:  why vehicle
+automation appears, at least on the surface, in the way that it does.
 
 \subsection{Science Fictions, Designed Dreams}
 
@@ -38,20 +38,21 @@ Science fiction is a perennial source of popular metaphors and ideas
 about technological change, in part perhaps because the visions are so
 compelling, but also because they are so easily available. While they
 too do not issue forth from a vacuum, coming from a potent combination
-of actual engineering and scientific developments mixed with fervent imagination,
+of actual engineering and scientific developments mixed with the imagination,
 science-fiction images represent easily-digestible cultural reference
 points for technological stories. From Asimov to \emph{Terminator},
 these sorts of pictures are endemic to discussions of Artificial
 Intelligence in the press. Visions of robotic drivers are cut from the
 same cloth. Stories and ideas about what autonomous cars will be are
-influenced by \emph{Minority Report}, \emph{KITT}, and \emph{Total
-  Recall}.\cite{???} Countless articles begin by describing
+influenced by \emph{Minority Report}\cite{fromHollywood}, \emph{KITT}\cite{wadeKITT}, and \emph{Total
+  Recall}.\cite{pasdirtzSolution} Countless articles begin by describing
 self-driving vehicles as a Hollywood or science-fiction
-staple.\cite{???-http://seekingalpha.com/article/2798325-a-window-into-a-driverless-future-from-science-fiction-to-reality} 
+staple.\cite{scifiToReality} 
 
 Many, indeed most, articles seem ignorant of the actual research
-history. Some bring up the pioneering work done by Mercedes and Ernst
-Dickmanns in Germany in the 1990s.\cite{???} But few connect
+history. Some, especially from more scholarly establishments, bring up
+the pioneering work done by Mercedes and Ernst
+Dickmanns in Germany in the 1990s.\cite{HCRIDriverless} But few connect
 autonomous vehicles today as part of a long research history going
 back to the 1960s, and an even longer set of engineering dreams going
 back at least to the 1920s. Such narratives would be at least as
@@ -60,17 +61,17 @@ suggest that some of the shock value of the technology would be lost
 by linking it to a deep history of research and effort. Connecting it
 instead to the dreams and aspirations of Hollywood cinema makes it
 more novel, exciting, even magical. And that hype fits the business
-goals of many news outlets interested only in pageviews.
+goals of many news outlets interested primarily in pageviews.
 
 But despite this paucity of historical grounding, certain historically-specific
 dreams do filter through into the narratives of autonomous technology
 through the media of popular culture and fiction. \emph{The Jetsons}, though
 the show did not actually foreground driverless vehicles, get
 remembered due to the role of flying cars, which trigger similar visions of wild
-futures made possible through technology.\cite{???} GM's Firebird III, from a
+futures made possible through technology.\cite{JetsonsAge} GM's Firebird III, from a
 similar era, is remembered due to its publicity campaign and
-subsequent cultural presence,\cite{???-http://www.fool.com/investing/general/2013/12/22/google-vs-tesla-vs-ford-who-has-the-best-self-driv.aspx} despite that the vehicle actually
-contained no autonomous technology of any kind.\cite[p. ???]{wetmore} It was
+subsequent cultural presence,\cite{walshVs} despite that the vehicle actually
+contained no autonomous technology of any kind.\cite[p. 7]{wetmore} It was
 itself an engineering fiction. 
 
 These fictions are powerful because they do not answer to logic and
@@ -79,70 +80,86 @@ are in part works of theater, objects of technological spectacle which
 are not yet truly real, despite their existence as physical objects
 which can be photographed and experienced. Such real-world contact is
 yet limited to a lucky few. Special press events are hosted to allow journalists
-to ride in these vehicles.\cite{???} Their capabilities are touted,
+to ride in these vehicles. Their capabilities are touted,
 advertised, but their media picture is still tightly controlled. Not subsumed
-to the mundane, the quotidian, they still possess that magic that
+to the mundane, the quotidian,\foonote{Certain articles from people
+  who have actually gone for a ride in these vehicles stress the
+  boredom and mundanity that comes with operating this
+  technology.\cite{rode500} But this does not represent the
+  preponderance of coverage. It also should be noted that boredom
+  always comes with the potential of its opposite. Operating automated
+systems can involve, as Sheridan describes, ``hours or boredom
+punctuated by moments of terror.''\cite[p. 339]{sheridan}} they still possess that magic that
 makes science fiction connections obvious and compelling. But this
 does not mean such connections are unproblematic. Far from it. By
 their alignment of these vehicles to science fiction, popular
-narratives curry forward those pictures of the technology already
+narratives emphasize images of the technology as it has already been
 envisioned, and obscure the multitude of potential implementations
 that can emerge from engineering practice in the moment. Self-driving
 cars threaten to become natural and obvious, in a particular form,
 through their associations with existing, known and culturally
 assimilated media portrayals.
 
-But the statements of researchers themselves are responsible for
+But the statements of researchers themselves are also responsible for
 shaping conventional narratives of autonomous vehicle
-development---making their own design fictions, technocultural dreams
-that motivate their research.
-Since these vehicles have the potential to reshape many areas of life, it should
-be no surprise that a cross-section of researchers interested in the
-issue is broad indeed. Some are engineers, including those whose
-papers have made it into the news. Others are mathematicians and
-computer scientists working on problems ostensibly related to
+development---through the making of their own design fictions,
+technocultural dreams that motivate their research.
+Since automated vehicles have the potential to reshape many areas of life, it should
+be no surprise that the cross-section of researchers interested in the
+technology is broad indeed. Some are vehicle engineers, some of whom have been
+interviewed or had their research papers picked up by news outlets.
+Others are mathematicians and
+computer scientists working on other problems related to
 autonomous vehicle systems. And yet others are designers and urban
 planners interested in how the next generation of vehicle systems will
 affect our cities. The breadth of people involved means a breadth of
-technical competencies, but many of these contributions buy into the
+technical competencies. And many (though not all) of these contributions buy into the
 implicit teleological progress narrative, whether or not they expect
 driverless cars to be feasible in the market soon.
 
 One particular strain of ideas comes from those interested in the
-social benefits that would accrue, if only cars could be automated.
+social benefits that would accrue if and when cars could be automated.
 Daniela Rus of MIT's CSAIL speaks of ``data-driven mobility'' and the
 idea of using the affordances of automated vehicles to improve traffic
-patterns.\footnote{Speaking at the Senseable Cities Conference, MIT
-  ???} Taking data from phones, road cameras, satellites, and other
-sources already provides the potential of forecasting congestion,
+patterns.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014} Taking
+data from phones, road cameras, satellites, and other 
+sources already provides the potential of forecasting congestion, from
+this perspective,
 provided we ``put it all in the cloud'' so that it can be collated and
-queried at scale. Growing from this idea of suggesting individuals drive at
-different times or use different routes, autonomous vehicles would add
+queried at scale. While this approach allows incentivizing individuals to drive at
+different times or use different routes, widespread use of autonomous vehicles would add
 the possibility of moving vehicles around based on predicted or
 current demand, and therefore potentially reduce the number of
-vehicles needed to move people in a city.
-
--???-Insert-Study-From-Ryan-Chin-Here performed mathematical modeling
-work on this topic, and discovered that a significantly smaller number
-of cars could move all the people in a city if they were automated and
-could respond to demand.
+vehicles needed to move people in a city. Researchers at MIT and Stanford, as part of the
+SMART\footnote{Singapore-MIT Alliance for Research and Technology} initiative, have
+performed mathematical modeling work on this topic, and found that a
+significantly smaller number of cars could supply all the mobility
+needs of Singapore if they were automated and could respond to demand.
+Specifically, their models suggest that 300,000 vehicles could serve
+all mobility needs during peak times with waits of less than 15
+minutes, and even a fleet of 200,000 vehicles could reduce wait times
+to about 3 minutes during off-peak hours.\cite{frazzoliSingapore} This
+compares to 779,890 passenger vehicles actually owned in Singapore,
+according to 2011 numbers.
 
 Along similar
 lines, Christian Zulberti of the ENEL Foundation envisions using
 autonomous vehicles to remove traffic lights in
-cities.\footnote{Speaking at the Senseable Cities Conference, MIT ???} And Paolo
+cities.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014} And Paolo
 Santi of the MIT SENSEable City lab talks of replacing traffic lights
 with a slot-based system, using cars that can communicate with each
 other and with infrastructure to double the capacity of the
-roadway.\footnote{Speaking at the Senseable Cities Conference, MIT
-  ???} Each vehicle would request a slot to pass through the
+roadway.\footnote{Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014} Each vehicle would request a slot to pass through the
 intersection, and would be instructed to proceed according to the
 orchestrate of a central control system. This would be the return of
 Zworykin's dreams at RCA from the 1950s. Singapore is engaging in
 controlled vehicle tests to work on just such ideas, to improve car
 sharing with vehicle-to-vehicle communications and predictive traffic
-patterns.\footnote{Lam Wee Shan speaking at the Senseable Cities
-  Conference, MIT ???} 
+patterns.\footnote{Lam Wee Shan, speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014} 
 
 These concepts assume particular communicative competencies. While
 some would seem to require fully-automated vehicles, other
@@ -161,9 +178,16 @@ intersection, forget the complex dynamics of human volition and our
 tendency toward homeostasis of inconvenience: city planning has found
 time and time again over the last 50 years that increasing the
 capacity of roadways does not result in less congestion, only more
-people driving.\cite{???-somethingFromMitchell} Nevertheless, these
+people driving.\cite[p. 219]{marshallFuture} One researcher I talked
+to put the problem in terms of Jevon's paradox: at some point,
+efficiency improvements will saturate, ``so the only true mechanism
+[of reducing congestion],
+at least the one that's been proven, through research, is pricing, is
+through taxation.''
+
+Nevertheless, these
 sorts of envisioned futures support a get-out-of-the-way rhetoric
-among their supporters. As one suggested to me in an interview:
+among their supporters. As another suggested to me in an interview:
 ``privacy-nuts'' and ``soccer-moms'' will be disturbed by the
 technology, but we should press forward anyway. Such dismissive and
 derisive categorizations, applied nonchalantly, suggest that anyone
@@ -178,14 +202,15 @@ initiative. He suggests that in a world with an aging population, and
 especially in the United States given our often lacking public
 transportation infrastructure, personal mobility for a growing
 population unable to drive themselves should be one of the primary
-goals of future development.\footnote{Discussion with the author, Date
-???} Mobility, as an aspect of personal agency, is very important both
+goals of future development.\footnote{Discussion with the author,
+  August 20, 2014} Mobility, as an aspect of personal agency, is very important both
 for one's ability to live and provide for oneself, as well as for
 fostering independence and feelings of self-worth. As a side benefit,
 one researcher noted, providing automated mobility solutions should
 help persuade more senior citizens who can no longer drive safely to
 give up their licenses voluntarily, rather than risk a serious
-accident.
+accident.\footnote{This is especially true for those who do not have a
+  family member they can count on to assist them.}
 
 This primarily automotive vision is not the only model of urban
 mobility through autonomous systems, however, and is fraught with
@@ -223,31 +248,21 @@ understanding of the history of factory labor and the automation of work.
 Human technological progress since antiquity has
 involved continual re-negotiations of human labor and the roles of
 animals and mechanisms in the labor process. Due to a confluence
-of factors---the continuing miniaturization of computing technology, new
+of factors---the miniaturization of computing technology, new
 advances in machine learning and artificial intelligence algorithms, a
 gradual increase in battery capacities, faster wireless networks---the
 horizons for everyday automation are broader now than ever before. 
 
-The popular visions of this technology focus on the future: the
-idea that in just two decades the majority of cars on the road will be
-fully autonomous. Even respected business information and consulting
-bodies have bought into this dream.\footnote{For example, the IHS
-  predicts 54 million such vehicles by 2035, which is not as extreme,
-  but still a sizable fraction of road vehicles \cite{IHSstudy}} In these vehicles, the users would
-step in, select a destination, and would then be free to read, sleep,
-watch a movie, answer emails, or otherwise occupy themselves without
-needing to pay any attention to the operation of the vehicle. While this
-vision has its benefits, it makes many people nervous about
-ceding their driving agency to a computer system.\cite{clytton} News articles fret
+But though the focus is on the future, our past is deeply involved
+in its presentation. News articles fret
 about what will happen when no one knows how to drive manually any
 more,\cite{pross} a classic fear of ``de-skilling'' that is implicated in so many
 other implementations of computers. Furthermore, coexistence with
 autonomous or automated systems is sometimes presented as a fundamentally new
 situation, as if human beings had never before had to work and live
 with and next to automated systems, presenting new benefits and
-dangers, and requiring new roles for their human tenders.
-
-However, automation already has a deep
+dangers, and requiring new roles for their human tenders. However,
+automation already has a deep 
 history in the industrial sector. Current debates and fears about de-skilling, human jobs,
 and the role and value of human labor return us to questions that have
 plagued factories, and labor's relationship to machinery, since the
@@ -257,12 +272,13 @@ stories that get told about driverless cars and factory automation are
 primarily those rooted in the cultural consciousness, rather than in
 nuanced, factual histories.
 
-The early areas of automation which get picked-up by popular attention
-include the textile mills of the early 1800s, in which a large
-proportion of hand-labor was replaced by steam-powered (in the UK) and
-water-powered industrial machinery.\cite{???-fromMRSmithClass} The
+One of the commonly referenced histories of automation is that of thee
+textile mills of the early 1800s, in which a large
+proportion of hand-labor was replaced by steam- or
+water-powered industrial machinery, and which has entered our collective
+consciousness. The
 story here is a familiar one: skilled artisans made obsolete by the
-lower cost and higher productive capacity of mechanical labor. By
+lower cost and higher productive capacity of mechanical labor.\cite{pewPositive} By
 analogy, new types of skilled labor (taxi and limousine drivers, or
 even bus drivers) are now under threat, and their fate should be no
 different than that of the workers who came before.
