--- a/chap3.tex
+++ b/chap3.tex
@@ -33,7 +33,12 @@ As a way to INTRODUCE HSC, actually
 
 \subsection{Whither Alternate Narratives?}
 
-
+note especially the contradiction within X's characterization of human
+drivers and their future: ``humans are bad drivers and we should all
+have our licenses taken away'' compared with ``car nuts should welcome
+this because it will free the roads up for them'' which doesn't
+actually make sense!
+--but there's perhaps a middle ground here in the hybrid narrative
 
 1) bring in the telerobotics/supervisory control literature
 -why supervisory control? and where is it used? (5 p)
