--- a/intro.tex
+++ b/intro.tex
@@ -54,7 +54,19 @@ HOWEVER nobody (popularly) seems to dispute what the object is that is
 >being discussed, or how else it might look. both these narratives
 >tend to take a particular technological picture and either support it
 >or illustrate its problems
->''if you are asked to take control, we've failed''
+>idea that ''if you are asked to take control, we've failed'' as a culture of developers
+
+The popular visions of this technology focus on the future: the
+idea that in just two decades the majority of cars on the road will be
+fully autonomous. Even respected business information and consulting
+bodies have bought into this dream.\footnote{For example, the IHS
+  predicts 54 million such vehicles by 2035, which is not as extreme,
+  but still a sizable fraction of road vehicles \cite{IHSstudy}} In these vehicles, the users would
+step in, select a destination, and would then be free to read, sleep,
+watch a movie, answer emails, or otherwise occupy themselves without
+needing to pay any attention to the operation of the vehicle. While this
+vision has its benefits, it makes many people nervous about
+ceding their driving agency to a computer system.\cite{clytton}
 
 
 
