--- a/main.bib
+++ b/main.bib
@@ -20,6 +20,7 @@
    journal = {CNN},
    month = "November 27",
    year = 2014,
+   note = "http://www.cnn.com/2014/11/27/tech/innovation/gigaom-storify-future-of-transport/index.html",
 }
 
 @ARTICLE{pross,
@@ -28,6 +29,7 @@
    journal = {IEEE Spectrum},
    month = "May 29",
    year = 2014,
+   note = "http://spectrum.ieee.org/transportation/advanced-cars/driverless-cars-optional-by-2024-mandatory-by-2044",
 }
 
 @ARTICLE{simonite,
@@ -36,6 +38,7 @@
    journal = {MIT Technology Review},
    month = "May 30",
    year = 2014,
+   note = "http://www.technologyreview.com/news/527756/lazy-humans-shaped-googles-new-autonomous-car/",
 }
 
 @ARTICLE{robotworx,
@@ -45,6 +48,7 @@
    journal = "{R}obot{W}orx",
    month = "Accessed December 11",
    year = "2014",
+   note = "http://www.robots.com/articles/viewing/robot-vehicles",
 }
 
 @ARTICLE{wyegrist,
@@ -54,6 +58,7 @@
    journal = "{W}ye {G}rist {M}ill website",
    month = "Accessed December 11",
    year = "2014",
+   note = "http://www.oldwyemill.org/timeline.htm",
 }
 
 @BOOK{dieboldImpact,
@@ -265,6 +270,7 @@
    journal = "New York Times",
    month = "November 17",
    year = 2014,
+   note = "http://www.nytimes.com/2014/11/18/science/researchers-announce-breakthrough-in-content-recognition-software.html?_r=0",
 }
 
 @ARTICLE{gomesJordan,
@@ -273,6 +279,7 @@
    journal = {IEEE Spectrum},
    month = "October 20",
    year = 2014,
+   note = "http://spectrum.ieee.org/robotics/artificial-intelligence/machinelearning-maestro-michael-jordan-on-the-delusions-of-big-data-and-other-huge-engineering-efforts",
 }
 
 @ARTICLE{jordanResponse,
@@ -281,6 +288,7 @@
    journal = "UC Berkeley AMPLab",
    month = "October 22",
    year = 2014,
+   note = "Via the Internet Archive: http://web.archive.org/web/20150124043915/https://amplab.cs.berkeley.edu/2014/10/22/big-data-hype-the-media-and-other-provocative-words-to-put-in-a-title/",
 }
 
 @ARTICLE{vincentMario,
@@ -289,6 +297,7 @@
    journal = {The Verge},
    month = "January 19",
    year = 2015,
+   note = "http://www.theverge.com/2015/1/19/7852975/artificially-intelligent-mario-learns-feel",
 }
 
 @ARTICLE{knightFurther,
@@ -297,6 +306,7 @@
    journal = {MIT Technology Review},
    month = "October 22",
    year = 2013,
+   note = "http://www.technologyreview.com/featuredstory/520431/driverless-cars-are-further-away-than-you-think/"
 }
 
 @BOOK{mackenzie,
@@ -314,6 +324,7 @@
    journal = {OnStar Website},
    month = "Accessed October 19",
    year = 2014,
+   note = "https://www.onstar.com/us/en/home.html",
 }
 
 @ARTICLE{wetmore,
@@ -331,7 +342,125 @@
    journal = "Boing Boing",
    month = "January 15",
    year = 2015,
+   note = "http://boingboing.net/2015/01/15/in-an-effort-to-suck-up-to-loc.html",
 }
+
+@ARTICLE{wadeKITT,
+   author = "Peter Wade",
+   title = "{I}s {T}hat {Y}ou, {KITT}? {A}udi {C}laims to {H}ave {S}et {D}rivelress {C}ar {S}peed {R}ecord",
+   journal =  "FastCompany",
+   month = "October 22",
+   year = "2014",
+   note = "http://www.fastcompany.com/3037455/is-that-you-kitt-audi-claims-to-have-set-driverless-car-speed-record",
+}
+
+@ARTICLE{fromHollywood,
+   author = "CNN Wire Staff",
+   title = "{D}riverless cars: {F}rom {H}ollywood to real world",
+   journal =  "CNN",
+   month = "November 22",
+   year = "2013",
+   note = "http://edition.cnn.com/2013/11/21/business/renault-nissan-ceo-wants-driverless/index.html",
+}
+
+@ARTICLE{pasdirtzSolution,
+   author = "George Pasdirtz",
+   title = "{A} {S}olution to {D}riverless {C}ar {P}roblems",
+   journal =  "George Pasdirtz Random Noise blog",
+   month = "January 31",
+   year = "2015",
+   note = "http://georgepasdirtz.blogspot.com/2015/01/a-solution-to-driverless-car-problems.html",
+}
+
+@ARTICLE{scifiToReality,
+   key = "a window into a driverless",
+   author = "",
+   title = "{A} {W}indow {I}nto A {D}riverless {F}uture: {F}rom {S}cience {F}iction To {R}eality",
+   journal =  "Seeking Alpha",
+   month = "January 5",
+   year = "2015",
+   note = "http://seekingalpha.com/article/2798325-a-window-into-a-driverless-future-from-science-fiction-to-reality",
+}
+
+@ARTICLE{HCRIDriverless,
+   author = "Alexa Peseri",
+   title = "{T}he {G}oogle {D}riverless {C}ar: "{A} {C}ool {T}hing that {M}atters",
+   journal =  "Humanity Centered Robotics Initiative",
+   month = "August 25",
+   year = "2013",
+   note = "http://hcri.brown.edu/2013/08/25/the-google-driverless-car-a-cool-thing-that-matters/",
+}
+
+@ARTICLE{JetsonsAge,
+   author = "Julianne Pepitone",
+   title = "{J}etsons {A}ge {B}eckons, {B}ut {O}pinion {S}plit on {D}riverless {C}ar, {D}rones",
+   journal =  "NBC News",
+   month = "February 11",
+   year = "2014",
+   note = "http://www.nbcnews.com/tech/innovation/jetsons-age-beckons-opinion-split-driverless-car-drones-n27221",
+}
+
+@ARTICLE{walshVs,
+   author = "Tamara Walsh",
+   title = "{G}oogle vs. {T}esla vs. {F}ord: {W}ho {H}as the {B}est {S}elf-{D}riving {C}ar to {G}et {Y}ou {H}ome {S}afely",
+   journal =  "The Motley Fool",
+   month = "December 22",
+   year = "2013",
+   note = "http://www.fool.com/investing/general/2013/12/22/google-vs-tesla-vs-ford-who-has-the-best-self-driv.aspx",
+}
+
+@INCOLLECTION{smithSelling,
+   author = "M. L. Smith",
+   title = "{S}elling the {M}oon: {T}he {U.S.} {M}anned {S}pace {P}rogram and the {T}riumph of {C}ommodity {S}cientism",
+   editor = "R. W. Fox and T. J. J. Lears",
+   booktitle = "{T}he {C}ulture of {C}onsumption: {C}ritical {E}ssays in {A}merican {H}istory, 1880-1980",
+   chapter = 6,
+   type = "Chapter",
+   pages = "175-236",
+   publisher = "Pantheon",
+   address = "New York",
+   year = 1983,
+}
+
+@ARTICLE{rode500,
+   author = "Alex Davies",
+   title = "{I} {R}ode 500 {M}iles in a {S}elf-{D}riving {C}ar and {S}aw the {F}uture. {I}t's {D}elightfully {D}ull",
+   journal =  "Wired",
+   month = "January 7",
+   year = "2015",
+   note = "http://www.wired.com/2015/01/rode-500-miles-self-driving-car-saw-future-boring/",
+}
+
+@INCOLLECTION{frazzoliSingapore,
+   author = "Kevin Spieser and Kype Treleaven and Rick Zhang and Emilio Frazzoli and Daniel Morton and Marco Pavone",
+   title = "{T}oward a {S}ystematic {A}pproach to the {D}esign and {E}valuation of {A}utomated {M}obility-on-{D}emand {S}ystems",
+   booktitle =  "Road Vehicle Automation",
+   series = "Lecture Notes in Mobility",
+   publisher = "Springer International Publishing",
+   year = "2014",
+   note = "Via MIT dSpace",
+}
+
+@BOOK{sheridan,
+   author = "Thomas Sheridan",
+   title = "{T}elerobotics, {A}utomation, and {H}uman {S}upervisory {C}ontrol",
+   publisher = "MIT Press",
+   address = "Cambridge, Massachusetts",
+   edition = "Second",
+   year = "1992",
+}
+
+
+@ARTICLE{pewPositive,
+   author = "Aaron Smith and Janna Anderson",
+   title = "{V}iews from {T}hose {W}ho {E}xpect {AI} and {R}obotics to {H}ave a {P}ositive or {N}eutral {I}mpact on {J}obs by 2025",
+   journal =  "Pew Research Center",
+   month = "August 6",
+   year = "2014",
+   note = "http://www.pewinternet.org/2014/08/06/views-from-those-who-expect-ai-and-robotics-to-have-a-positive-or-neutral-impact-on-jobs-by-2025/",
+}
+
+
 
 @TECHREPORT{predictPatent,
    author = "Jiajun Zhu and David I. Ferguson and Dmitri A. Dolgov",
@@ -401,6 +530,22 @@
    address = "Oxford, UK",
    year = 1990,
 }
+
+@INCOLLECTION{marshallFuture,
+   crossref = "kempCars",
+   author = "Alex Marshall",
+   title = "{T}he {F}uture of {T}ransportation",
+   pages = "215--219",
+}
+
+@BOOK{kempCars,
+   editor = "Roger L. Kemp",
+   booktitle = "{C}ities and {C}ars: {A} {H}andbook of {B}est {P}ractices",
+   title = "{C}ities and {C}ars: {A} {H}andbook of {B}est {P}ractices",
+   publisher = "McFarland & Company",
+   year = 2007,
+}
+
 
 
 
