edits to chapter 1 proceeding, first section complete

--- a/main.bib
+++ b/main.bib
@@ -450,6 +450,23 @@
    year = "1992",
 }
 
+@ARTICLE{wienerMachineThreat,
+   author = "Norbert Wiener",
+   title = "{T}he {M}achine as {T}hreat and {P}romise",
+   journal = "St. Louis Post-Dispatch",
+   month = "December 13"
+   year = "1953",
+   note = "From Norbert Wiener Papers. MC 22. Box 30C, Folder 732. Institute Archives and Special Collections, MIT Libraries, Cambridge, Massachusetts.",
+}
+
+@ARTICLE{gatesRobots,
+   author = "Brad Reed",
+   title = "{B}ill {G}ates: {Y}es, robots really are about to take your jobs",
+   journal = "BGR",
+   month = "March 14"
+   year = "2014",
+   note = "http://bgr.com/2014/03/14/bill-gates-interview-robots/",
+}
 
 @ARTICLE{pewPositive,
    author = "Aaron Smith and Janna Anderson",
@@ -458,6 +475,70 @@
    month = "August 6",
    year = "2014",
    note = "http://www.pewinternet.org/2014/08/06/views-from-those-who-expect-ai-and-robotics-to-have-a-positive-or-neutral-impact-on-jobs-by-2025/",
+}
+
+%% FIND A NEURAL NETWORK PRIMER I CAN REFER TO\footnote{
+%% (perhaps Jordan, Michael I.; Bishop, Christopher M. (2004). ``Neural
+%% Networks''. In Allen B. Tucker. Computer Science Handbook, Second
+%% Edition (Section VII: Intelligent Systems). Boca Raton, FL: Chapman \&
+%% Hall/CRC Press LLC)}
+
+@INCOLLECTION{neuralJordan,
+   author = "Michael I. Jordan and Christopher M. Bishop",
+   title = "{N}eural {N}etworks",
+   editor = "Allen B. Tucker",
+   booktitle = "{C}omputer {S}cience {H}andbook",
+   edition = "Second",
+   chapter = 7,
+   type = "Section",
+   publisher = "Chapman & Hall/CRC Press LLC",
+   address = "Boca Raton, FL",
+   year = 2004,
+}
+
+@ARTICLE{bothpt1,
+   author = "Göde Both",
+   title = "{W}hat {D}rives {R}esearch in {S}elf-{D}riving {C}ars? ({P}art 1: {T}wo {M}ajor {E}vents)",
+   journal =  "CASTAC Blog",
+   month = "April 1",
+   year = "2014",
+   note = "http://blog.castac.org/2014/04/what-drives-research-in-self-driving-cars-part-1-two-major-events/",
+}
+
+@ARTICLE{bothpt2,
+   author = "Göde Both",
+   title = "{W}hat {D}rives {R}esearch in {S}elf-{D}riving {C}ars? ({P}art 2: {S}urprisingly, not {M}achine {L}earning)",
+   journal =  "CASTAC Blog",
+   month = "April 3",
+   year = "2014",
+   note = "http://blog.castac.org/2014/04/what-drives-research-in-self-driving-cars-part-2-surprisingly-not-machine-learning/",
+}
+
+@ARTICLE{NHTSA,
+   author = "National Highway Traffic Safety Administration",
+   title = "{P}reliminary {S}tatement of {P}olicy {C}oncerning {A}utomated {V}ehicles",
+   month = "May 30",
+   year = "2014",
+   note = "http://www.nhtsa.gov/staticfiles/rulemaking/pdf/Automated_Vehicles_Policy.pdf",
+}
+
+@ARTICLE{SAE,
+   author = "Society for Automotive Engineers",
+   title = "{S}urface {V}ehicle {I}nformation {R}eport {J}3016, {T}axonomy and {D}efinitions for {T}erms {R}elated to {O}n-{R}oad {M}otor {V}ehicle {A}utomated {D}riving {S}ystems",
+   month = "January",
+   year = "2014",
+}
+
+@INCOLLECTION{Michon,
+   author = "J. A. Michon",
+   title = "A critical view of driver behavior models: what do we know, what should we do?",
+   booktitle =  "Human Behavior and Traffic Safety",
+   editor = "L. Evans and R. C. Schwing",
+   address = "New York",
+   publisher = "Plenum Press",
+   pages = "485--502",
+   year = "1985",
+   note = "Cited in SAE J3016.",
 }
 
 
