--- a/chap1.tex
+++ b/chap1.tex
@@ -82,7 +82,7 @@ which can be photographed and experienced. Such real-world contact is
 yet limited to a lucky few. Special press events are hosted to allow journalists
 to ride in these vehicles. Their capabilities are touted,
 advertised, but their media picture is still tightly controlled. Not subsumed
-to the mundane, the quotidian,\foonote{Certain articles from people
+to the mundane, the quotidian,\footnote{Certain articles from people
   who have actually gone for a ride in these vehicles stress the
   boredom and mundanity that comes with operating this
   technology.\cite{rode500} But this does not represent the
@@ -975,7 +975,7 @@ the previous techniques.
 
 Neural networks are essentially just a web of nodes with
 interconnections between them.\footnote{For a primer on neural
-  networks, see \cite{neuralJordan.}} They may consist of multiple layers
+  networks, see \cite{neuralJordan}.} They may consist of multiple layers
 (hence ``deep'' in deep learning) or may be shallow. Also known as
 ``multilayer perceptrons,'' such networks have an input layer and
 output layer, with one or more intervening hidden layers. Each node
@@ -1186,7 +1186,7 @@ While this question seems fatuous, it becomes important if the
 physical state of the driver's body will define system-level
 automation. (It is also worth noting that this clarification is
 unnecessarily normative, and does not transfer to other types of
-bodily input—like GM's abandoned ``Unicontrol''\cite[p. 8]{wetmore}—or controls designed
+bodily input---like GM's abandoned ``Unicontrol''\cite[p. 8]{wetmore}---or controls designed
 for amputees.) Though this stipulation attempts to address what the
 human driver is actually doing, it is insufficiently granular to
 account for the various types of mental and physical effort exerted:
@@ -1244,7 +1244,7 @@ vehicle (in level 2 the vehicle does not monitor, and in level 3 it
 does). In contrast, the NHTSA report does not make this plain, and
 indeed a level 2 system can be said to ``relinquish control with no
 advance warning'' which is impossible without either knowledge of the
-environment or the occurrence of a bug—the system needs something on
+environment or the occurrence of a bug---the system needs something on
 which to base its decision to ``relinquish control'' if such a decision
 can be said to be made.\cite[p. 5]{NHTSA} Rather than overloading the word ``control,''
 the SAE considers the ``dynamic driving task'' to have a number of
