--- a/main.bib
+++ b/main.bib
@@ -3,9 +3,10 @@
 	# "\newcommand{\singleletter}[1]{#1} "
 	# "\newcommand{\switchargs}[2]{#2#1} " }
 
+%%TODO: fix missing year/fields
 
 @ARTICLE{IHSstudy,
-   key = "self",
+   key = "Self-Driving Cars Moving...",
    author = "",
    title = "{S}elf-{D}riving {C}ars {M}oving into the {I}ndustry's {D}river's {S}eat - {IHS} {A}utomotive {S}tudy",
    journal = {Automotive Industries},
@@ -42,7 +43,7 @@
 }
 
 @ARTICLE{robotworx,
-   key = "robot vehicles",
+   key = "Robot Vehicles",
    author = "",
    title = "{R}obot {V}ehicles",
    journal = "{R}obot{W}orx",
@@ -52,7 +53,7 @@
 }
 
 @ARTICLE{wyegrist,
-   key = "timeline",
+   key = "Timeline",
    author = "",
    title = "{T}imeline",
    journal = "{W}ye {G}rist {M}ill website",
@@ -83,6 +84,7 @@
 @UNPUBLISHED{roesmithYankee,
    author = "Merritt Roe Smith",
    title = "{Y}ankee {A}rmorers and the {U}nion {W}ar {M}achine",
+   year = 2014,
    note = "(Author's draft, July 1, 2014)",
 }
 
@@ -232,7 +234,6 @@
 }
 
 @TECHREPORT{dartmouthconf,
-   key = "mccarthy",
    author = "J. McCarthy and M. L. Minksy and N. Rochester and C. E. Shannon",
    title = "{A} {P}roposal for the {D}artmouth {S}ummer {R}esearch {P}roject on {A}rtificial {I}ntelligence",
    institution = "From the Norbert Wiener Papers, MC 22. Box 31: Folder 798",
@@ -270,7 +271,7 @@
    journal = "New York Times",
    month = "November 17",
    year = 2014,
-   note = "http://www.nytimes.com/2014/11/18/science/researchers-announce-breakthrough-in-content-recognition-software.html?_r=0",
+   note = "http://www.nytimes.com/2014/11/18/science/researchers-announce-breakthrough-in-content-recognition-software.html?\_r=0",
 }
 
 @ARTICLE{gomesJordan,
@@ -318,7 +319,7 @@
 }
 
 @ARTICLE{onstar,
-   key = "onstar",
+   key = "OnStar",
    author = "",
    title = "{H}ome",
    journal = {OnStar Website},
@@ -373,7 +374,7 @@
 }
 
 @ARTICLE{scifiToReality,
-   key = "a window into a driverless",
+   key = "A Window Into a Driverless...",
    author = "",
    title = "{A} {W}indow {I}nto A {D}riverless {F}uture: {F}rom {S}cience {F}iction To {R}eality",
    journal =  "Seeking Alpha",
@@ -384,7 +385,7 @@
 
 @ARTICLE{HCRIDriverless,
    author = "Alexa Peseri",
-   title = "{T}he {G}oogle {D}riverless {C}ar: "{A} {C}ool {T}hing that {M}atters",
+   title = "{T}he {G}oogle {D}riverless {C}ar: {A} {C}ool {T}hing that {M}atters",
    journal =  "Humanity Centered Robotics Initiative",
    month = "August 25",
    year = "2013",
@@ -454,7 +455,7 @@
    author = "Norbert Wiener",
    title = "{T}he {M}achine as {T}hreat and {P}romise",
    journal = "St. Louis Post-Dispatch",
-   month = "December 13"
+   month = "December 13",
    year = "1953",
    note = "From Norbert Wiener Papers. MC 22. Box 30C, Folder 732. Institute Archives and Special Collections, MIT Libraries, Cambridge, Massachusetts.",
 }
@@ -463,7 +464,7 @@
    author = "Brad Reed",
    title = "{B}ill {G}ates: {Y}es, robots really are about to take your jobs",
    journal = "BGR",
-   month = "March 14"
+   month = "March 14",
    year = "2014",
    note = "http://bgr.com/2014/03/14/bill-gates-interview-robots/",
 }
@@ -477,12 +478,6 @@
    note = "http://www.pewinternet.org/2014/08/06/views-from-those-who-expect-ai-and-robotics-to-have-a-positive-or-neutral-impact-on-jobs-by-2025/",
 }
 
-%% FIND A NEURAL NETWORK PRIMER I CAN REFER TO\footnote{
-%% (perhaps Jordan, Michael I.; Bishop, Christopher M. (2004). ``Neural
-%% Networks''. In Allen B. Tucker. Computer Science Handbook, Second
-%% Edition (Section VII: Intelligent Systems). Boca Raton, FL: Chapman \&
-%% Hall/CRC Press LLC)}
-
 @INCOLLECTION{neuralJordan,
    author = "Michael I. Jordan and Christopher M. Bishop",
    title = "{N}eural {N}etworks",
@@ -491,7 +486,7 @@
    edition = "Second",
    chapter = 7,
    type = "Section",
-   publisher = "Chapman & Hall/CRC Press LLC",
+   publisher = "Chapman \& Hall/CRC Press LLC",
    address = "Boca Raton, FL",
    year = 2004,
 }
@@ -515,15 +510,15 @@
 }
 
 @ARTICLE{NHTSA,
-   author = "National Highway Traffic Safety Administration",
+   author = "NHTSA",
    title = "{P}reliminary {S}tatement of {P}olicy {C}oncerning {A}utomated {V}ehicles",
    month = "May 30",
    year = "2014",
-   note = "http://www.nhtsa.gov/staticfiles/rulemaking/pdf/Automated_Vehicles_Policy.pdf",
+   note = "http://www.nhtsa.gov/staticfiles/rulemaking/pdf/Automated\_Vehicles\_Policy.pdf",
 }
 
 @ARTICLE{SAE,
-   author = "Society for Automotive Engineers",
+   author = "SAE",
    title = "{S}urface {V}ehicle {I}nformation {R}eport {J}3016, {T}axonomy and {D}efinitions for {T}erms {R}elated to {O}n-{R}oad {M}otor {V}ehicle {A}utomated {D}riving {S}ystems",
    month = "January",
    year = "2014",
@@ -623,7 +618,7 @@
    editor = "Roger L. Kemp",
    booktitle = "{C}ities and {C}ars: {A} {H}andbook of {B}est {P}ractices",
    title = "{C}ities and {C}ars: {A} {H}andbook of {B}est {P}ractices",
-   publisher = "McFarland & Company",
+   publisher = "McFarland \& Company",
    year = 2007,
 }
 
