--- a/main.tex
+++ b/main.tex
@@ -57,8 +57,8 @@ process all files:}
 \include{chap3}
 \include{concl}
 \appendix
-\include{appa}
-\include{appb}
+%\include{appa}
+%\include{appb}
 \include{biblio}
 \end{document}
 
